[package]
name = "bittorrent-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.159", features = ["derive", "rc"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
